@@ -49,6 +49,7 @@ t/tokenizer/Chars.t
 t/tokenizer/Words.t
 t/ui/readline.t
 t/usage/options.t
+t/usage/synopsis.t
 utils/crunchbase-companies
 utils/hailo-benchmark
 xt/01_pod.t
